--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -33,22 +33,35 @@
 <!-- サイドバー-->
 
 <section class="sidebar">
-  <li><a><i class="fa fa-times-circle-o"></i></a></li>
+  <a><i class="fa fa-times-circle-o"></i></a>
   <nav>
     <p>MENU</p>
     <ul class="accordion">
-      <li><a href="#1"  id="home">Home</a></li>
+    <!--   <li><a href="#1"  id="home">Home</a></li> -->
       <li><%= link_to 'About', 'about' %></li>
       <li id="ac">
         <section>Category+</section>
       </li>
       <ul>
-        <li><a href=" #">リスト 1-1</a></li>
-        <li><a href=" #">リスト 1-2</a></li>
-        <li><a href=" #">リスト 1-3</a></li>
-        <li><a href=" #">リスト 1-4</a></li>
-        <li><a href=" #">リスト 1-5</a></li>
-        <li><a href=" #">リスト 1-6</a></li>
+        <li class="big"><a href=" #">ALL</a></li>
+        <li class="big"><a href=" #">Art</a></li>
+        <li class="big"><a href=" #">Human</a></li>
+        <li class="big"><a href=" #">View</a></li>
+        <li class="big"><a href=" #">Animal</a></li>
+        <li><a href=" #">ねこ</a></li>
+        <li><a href=" #">いぬ</a></li>
+        <li><a href=" #">○○小女系</a></li>
+        <li><a href=" #">アイドル</a></li>
+        <li><a href=" #">女優</a></li>
+        <li><a href=" #">男優</a></li>
+        <li><a href=" #">サブカル</a></li>
+        <li><a href=" #">デザイン・絵</a></li>
+        <li><a href=" #">ファッション</li>
+        <li><a href=" #">世界</a></li>
+        <li><a href=" #">カルチャー</a></li>
+        <li><a href=" #">建築</a></li>
+        <li><a href=" #">料理</a></li>
+        <li><a href=" #">宗教</a></li>
       </ul>
       <li><%= link_to 'Book Request', 'request' %></li>
       <li><%= link_to 'Contact', 'contact' %></li>
