--- a/app/views/contact/thanks.html.erb
+++ b/app/views/contact/thanks.html.erb
@@ -16,8 +16,11 @@
 
   <body>
   	<br>
-	<p>お問い合わせいただきありがとうございました</p>
-  <p>ご入力いただいたメールアドレスに確認メールをお送りいたしました</p>
+	  <p class="thanks_message">
+    お問い合わせいただきありがとうございました<br>
+    ご入力いただいたメールアドレスに確認メールをお送りいたしました<br>
+    追ってご連絡させていただきますので今しばらくお待ちくださいませ
+    </p>
   </body>
 
 <html>
