--- a/app/views/contact_mailer/post_email.text.erb
+++ b/app/views/contact_mailer/post_email.text.erb
@@ -4,11 +4,13 @@
 下記の内容で承りました。
  
 --------------------------
-NAME: 
+Name: 
 <%= @contact.name %>
-EMAIL: 
+
+Email: 
 <%= @contact.email %>
-MESSAGE:
+
+Message:
 <%= @contact.message %>
 --------------------------
 
