--- a/app/views/contact_mailer/received_email.text.erb
+++ b/app/views/contact_mailer/received_email.text.erb
@@ -3,11 +3,12 @@
 Webサイトよりお問い合わせがありました。
  
 --------------------------
-NAME: 
+Name: 
 <%= @contact.name %>
-EMAIL: 
+
+Email: 
 <%= @contact.email %>
-MESSAGE:
+
+Message:
 <%= @contact.message %>
 --------------------------
-
