--- a/app/views/law/law.html.erb
+++ b/app/views/law/law.html.erb
@@ -14,31 +14,39 @@
 	<p id="about"><%= link_to 'About', 'about' %></p>
 
 	<body>
-      <div class="blackbox">
+      <div class="blackspace">
       　<div class="header1">利用規約</div>
  　　　　<div class="body1">
-		 	<strong>本規約への同意：</strong>
+ 			<strong>本サービスの目的</strong><br>
+ 			本サービスは「美意識に革命を。」というコンセプトのもと、無機質で効率重視になりがちなネットの世界に、
+ 			「ジャケ買い」の感覚ショッピングをもたらすべく創られました。
+ 			本サービスを通じて、あなたの直感を揺さぶる素敵な写真集を見つけてみてください。<br>
+		 	<strong>本規約への同意</strong><br>
 		 	利用者は、本サービスの利用を以て本規約に同意したものとみなします。
 		 	また本規約は、利用者への事前の告知なく任意の理由で変更されることがあります。<br>
-			<strong>本サービスの変更および停止：</strong>
+		 	<strong>プライバシーポリシー</strong><br>
+		 	利用者からのお問い合わせもしくはリクエストによって取得するお名前およびメールアドレスは、
+		 	お問い合わせもしくはリクエスト内容に関する調査および返答のために利用させていただきます。
+		 	またそれらの情報は第三者に提供することはありません。
+		 	ただし、利用者の同意を得た場合もしくは公的機関より正式な要請があった場合はその限りではありません。
+			<strong>本サービスの変更および停止</strong><br>
 			利用者への事前の告知なく任意の理由で、本サービスの提供を中断もしくは停止することができるものとします。
 			またそれにより生じた一切の損害について、責任を負わないものとします。<br>
-			<strong>責任の範囲：</strong>
-			本サービスを利用してなされた一切の行為およびその結果について、責任を負わないものとします。<br>
-			<strong>保証の否認：</strong>
+			<strong>責任の範囲</strong><br>
+			本サービスを利用してなされた一切の行為およびその結果について、責任を負わないものとします。
 			本サービスは、提供する写真集の情報にについて正確性、最新性その他を保証するものではありません。
 			利用者の責任において判断しご利用いただくものとします。<br>
-			<strong>アクセスログの利用：</strong>
+			<strong>ログの利用</strong><br>
 			利用者の統計的分析を行いよりよいサービスを提供するため、利用者のアクセスログを利用することがあります。
 			また利用者はこれを承諾するものとします。<br>
-			<strong>知的財産権：</strong>
+			<strong>知的財産権</strong><br>
 			本サービスが提供する写真集の情報に関する権利は本サービス運営団体は所有しておりません。
 			本サービスを構成する文章、画像およびプログラムに関する権利は本サービス運営団体が所有します。<br>
-			<strong>本サービス運営団体への連絡：</strong>
-			本サービスに関する問い合わせ等につきましては「CONTACT」ページをご利用ください。<br>
-<!-- 			<br> -->
-			2014年12月30日
-		 </div>
+			<strong>本サービス運営団体への連絡</strong><br>
+			本サービスに関するお問い合わせ等につきましては「CONTACT」ページをご利用ください。<br>
+	 	</div>
+		<div id="date">2014年12月30日<div>
+
 	  </div>
 
 	</body>
