--- a/app/views/layouts/about.html.erb
+++ b/app/views/layouts/about.html.erb
@@ -39,7 +39,7 @@
       <div class="message-header">More Info</div>
       <div class="m2-body">
         VISUALEMOTIONは、写真集を感性で選ぶサイトです。<br>
-        スクロールする中で直感を揺さぶる不寿あるがあった時、<br>
+        スクロールする中で直感を揺さぶるビジュアルがあった時、<br>
         それは新しい世界との出会いなのです。<br>
         写真集、アーティスト、クリエイター、彼らが感性を研ぎすませ作り上げた本。<br>
         それらの中には必ず、あなたの感覚に革命を与えるビジュアルがあるはずです。<br>
