--- a/app/assets/stylesheets/contact.css.scss
+++ b/app/assets/stylesheets/contact.css.scss
@@ -26,6 +26,34 @@
   }
 }
 
+#terms_of_conditions{
+  position: fixed;
+  top: 90px;
+  right: 30px;
+  a{
+    display: block;
+    width: 200px;
+    height: 40px;
+    font-family: Raleway;
+    font-weight: bold;
+    color: black;
+    text-decoration: none;
+    transition-duration: 1s;
+    line-height: 40px;
+    &:hover{
+        border-radius: 10px;
+        background-color: #f8ced0;
+        }
+  }
+}
+ul li{
+  width: 300px;
+  font-size: 0.75rem;
+  line-height: 20px;
+  color: black;
+}
+
+
 /* Common Layout For Contacts
 -------------------------------*/
 
@@ -36,7 +64,7 @@ body{
   background-position: center;
   position: relative;
   text-align: center;
-  height: 800px;
+  height: 1000px;
   width: 100%;
   font-family: Futura,Trebuchet MS,Arial,sans-serif;
 
@@ -45,8 +73,8 @@ body{
 h1{
   font-size: 3rem;
   color: black;
-  text-align: left;
-  margin-left: 450px;
+  text-align: center;
+  // margin-left: 450px;
   // float: center;
 
 }
@@ -70,6 +98,7 @@ p{
  color: black;
  font-weight: bold;
  font-family: Raleway;
+ margin: 0px 0px;
 }
 
 .text{
@@ -82,34 +111,22 @@ p{
   // line-height: 30px !important;
   }
 
-ul li{
- list-style-type: none;
- color: black;
- float: none;
- width: 300px;
- line-height: 0.5rem;
+// ul li{
+//  list-style-type: none;
+//  color: black;
+//  float: none;
+//  width: 300px;
+//  line-height: 0.5rem;
 
-}
+// }
 
 /* Confirm
 -------------------------------*/
 
-span{
+.thanks_message{
   font-size: 1rem;
-  // background-color: white;
+  line-height: 50px;
+  text-align: center;
+  font-family: serif;
 }
-
-
-
-// .header{
-//   float: center;
-//   background-color: none;
-//   color: black;
-// }
-
-// .text{
-//   width: 100px;
-//   height: 50px;
-//   float: center;
-// }
 
