--- a/app/views/request_mailer/post_email.text.erb
+++ b/app/views/request_mailer/post_email.text.erb
@@ -4,18 +4,22 @@
 下記の内容でリクエストを承りました。
  
 --------------------------
-タイトル:
+Book Title:
 <%= @request.title %>
-参考URL:
-<%= @request.book_url %>
-ジャンル:
-<%= @request.category %>
-MESSAGE:
-<%= @request.message %>
 
-NAME: 
+Category:
+<%= @request.book_url %>
+
+URL:
+<%= @request.category %>
+
+Name: 
 <%= @request.name %>
-EMAIL: 
+
+Email: 
 <%= @request.email %>
+
+Message:
+<%= @request.message %>
 --------------------------
 
