edit contact and request

--- a/app/assets/stylesheets/request.css.scss
+++ b/app/assets/stylesheets/request.css.scss
@@ -28,6 +28,54 @@
   }
 }
 
+#contact{
+  position: fixed;
+  top: 90px;
+  right: 30px;
+  a{
+    display: block;
+    width: 100px;
+    height: 40px;
+    color: white;
+    text-decoration: none;
+    transition-duration: 1s;
+    line-height: 40px;
+    font-family: Raleway;
+    font-weight: bold;
+    color: white;
+    &:hover{
+        border-radius: 10px;
+        background-color: #f8ced0;
+        }
+  }
+}
+
+#terms_of_conditions{
+  position: fixed;
+  top: 150px;
+  right: 30px;
+  a{
+    display: block;
+    width: 180px;
+    height: 40px;
+    font-family: Raleway;
+    font-weight: bold;
+    color: white;
+    text-decoration: none;
+    transition-duration: 1s;
+    line-height: 40px;
+    &:hover{
+        border-radius: 10px;
+        background-color: #f8ced0;
+        }
+  }
+}
+ul li{
+  width: 300px;
+  font-size: 0.75rem;
+  line-height: 20px;
+  color: white;
+}
 
 
 /* Background
@@ -130,8 +178,6 @@ table{
   float: center;
 }
   
-/* フォーム部品の幅 */
-  
 
 .message{
   // text-align: center;
@@ -146,12 +192,14 @@ table{
   font-size: 1rem;
   height: 50px;
   width: 200px;
-  background-color: white;
+  background-color: #996633;
+  color: white;
   font-family: Raleway;
   font-weight: bold;
   // float: center;
   // text-align: center;
   margin-left: 230px; /* check -*/
+
 }
 
 /* 
