--- a/app/assets/stylesheets/contact.css.scss
+++ b/app/assets/stylesheets/contact.css.scss
@@ -26,13 +26,33 @@
   }
 }
 
-#terms_of_conditions{
+#book_request{
   position: fixed;
   top: 90px;
   right: 30px;
   a{
     display: block;
-    width: 200px;
+    width: 150px;
+    height: 40px;
+    font-family: Raleway;
+    font-weight: bold;
+    color: black;
+    text-decoration: none;
+    transition-duration: 1s;
+    line-height: 40px;
+    &:hover{
+        border-radius: 10px;
+        background-color: #f8ced0;
+        }
+  }
+}
+#terms_of_conditions{
+  position: fixed;
+  top: 150px;
+  right: 30px;
+  a{
+    display: block;
+    width: 180px;
     height: 40px;
     font-family: Raleway;
     font-weight: bold;
@@ -85,7 +105,8 @@ h1{
   font-size: 1rem;
   height: 50px;
   width: 200px;
-  background-color: white;
+  background-color: #996633;
+  color: white;
   font-family: Raleway;
   font-weight: bold;
 }
@@ -111,6 +132,12 @@ p{
   // line-height: 30px !important;
   }
 
+.index_message{
+  color: black;
+  font-family: serif;
+  font-size: 1rem;
+}
+
 // ul li{
 //  list-style-type: none;
 //  color: black;
@@ -129,4 +156,5 @@ p{
   text-align: center;
   font-family: serif;
 }
+
 
